start to support automatic switching between IEEE and LLNC

--- a/template.meta.tex
+++ b/template.meta.tex
@@ -26,24 +26,24 @@
 % ------------------------------------------------------------------------------
 
 % author IEEE ------------------------------------------------------------------
-%\newcommand{\IEEEinstYYY}{\IEEEauthorblockA{\metaInstYYY}}
-%\newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY}
-%\newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}}
-%\newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX}
-%\author{\IEEEauthorYYY \and \IEEEauthorXXX}
+%\newcommand{\IEEEinstYYY}{\IEEEauthorblockA{\metaInstYYY}} % enable for IEEE style
+%\newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY} % enable for IEEE style
+%\newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}} % enable for IEEE style
+%\newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX} % enable for IEEE style
+%\author{\IEEEauthorYYY \and \IEEEauthorXXX} % enable for IEEE style
 % ------------------------------------------------------------------------------
 
 % author LLNCS -----------------------------------------------------------------
-\author{\metaAuthorYYY\inst{1} \and \metaAuthorXXX \inst{2}}
-\authorrunning{\metaAuthorYYY et al.}
-\tocauthor{\metaAuthorYYY, \metaAuthorXXX}
-\institute{\metaInstYYY\\
-\email{\metaMailYYY}
-\and
-\metaInstXXX\\
-\email{\metaMailXXX}
-}
-\titlerunning{\metaTitleShort}
+\author{\metaAuthorYYY\inst{1} \and \metaAuthorXXX \inst{2}} % enable for LLNCS style
+\authorrunning{\metaAuthorYYY et al.} % enable for LLNCS style
+\tocauthor{\metaAuthorYYY, \metaAuthorXXX} % enable for LLNCS style
+\institute{\metaInstYYY\\ % enable for LLNCS style
+\email{\metaMailYYY} % enable for LLNCS style
+\and % enable for LLNCS style
+\metaInstXXX\\ % enable for LLNCS style
+\email{\metaMailXXX} % enable for LLNCS style
+} % enable for LLNCS style
+\titlerunning{\metaTitleShort} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
 \newcommand{\metaSubject}{\metaConference~-~\metaConferenceArea} 
