--- a/template.config.tex
+++ b/template.config.tex
@@ -4,17 +4,15 @@
 
 
 % docuemnt class ---------------------------------------------------------------
-%\documentclass[runningheads]{llncs}
-%\documentclass[conference]{IEEEtran}
 \documentclass[
         a4paper,                % use a5paper for ISO A5; use a4paper for ISO A4
         pdftex,                 % PDF output
         10pt,                   % font size
-        %conference,             % IEEE requirement
-        %romanappendices,        % IEEE requirement
-        runningheads,           % LLCNS
-%]{IEEEtran}
-]{llncs}
+        %conference,             % enable for IEEE style
+        %romanappendices,        % enable for IEEE style
+        runningheads,           % enable for LLNCS style
+%]{IEEEtran} % enable for IEEE style
+]{llncs} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
 % ------------------------------------------------------------------------------
