default is now IEEE

--- a/template.config.tex
+++ b/template.config.tex
@@ -8,11 +8,11 @@
         a4paper,                % use a5paper for ISO A5; use a4paper for ISO A4
         pdftex,                 % PDF output
         10pt,                   % font size
-        %conference,             % enable for IEEE style
-        %romanappendices,        % enable for IEEE style
-        runningheads,           % enable for LLNCS style
-%]{IEEEtran} % enable for IEEE style
-]{llncs} % enable for LLNCS style
+ conference,             % enable for IEEE style
+ romanappendices,        % enable for IEEE style
+ %runningheads,           % enable for LLNCS style
+]{IEEEtran} % enable for IEEE style
+%]{llncs} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
 % ------------------------------------------------------------------------------
