--- a/template.tex
+++ b/template.tex
@@ -26,8 +26,8 @@
     \input{src/00_abstract}
     \end{abstract}
 
-    %\begin{IEEEkeywords}\metaKeywords\end{IEEEkeywords} % enable for IEEE style
-    \keywords{\metaKeywords} % enable for LLNCS style
+ \begin{IEEEkeywords}\metaKeywords\end{IEEEkeywords} % enable for IEEE style
+ %\keywords{\metaKeywords} % enable for LLNCS style
     % /* -------------------------------------------------------------------- */
 
     % /* -------------------------------------------------------------------- */
