--- a/template.meta.tex
+++ b/template.meta.tex
@@ -26,24 +26,24 @@
 % ------------------------------------------------------------------------------
 
 % author IEEE ------------------------------------------------------------------
-%\newcommand{\IEEEinstYYY}{\IEEEauthorblockA{\metaInstYYY}} % enable for IEEE style
-%\newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY} % enable for IEEE style
-%\newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}} % enable for IEEE style
-%\newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX} % enable for IEEE style
-%\author{\IEEEauthorYYY \and \IEEEauthorXXX} % enable for IEEE style
+\newcommand{\IEEEinstYYY}{\IEEEauthorblockA{\metaInstYYY}} % enable for IEEE style
+\newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY} % enable for IEEE style
+\newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}} % enable for IEEE style
+\newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX} % enable for IEEE style
+\author{\IEEEauthorYYY \and \IEEEauthorXXX} % enable for IEEE style
 % ------------------------------------------------------------------------------
 
 % author LLNCS -----------------------------------------------------------------
-\author{\metaAuthorYYY\inst{1} \and \metaAuthorXXX \inst{2}} % enable for LLNCS style
-\authorrunning{\metaAuthorYYY et al.} % enable for LLNCS style
-\tocauthor{\metaAuthorYYY, \metaAuthorXXX} % enable for LLNCS style
-\institute{\metaInstYYY\\ % enable for LLNCS style
-\email{\metaMailYYY} % enable for LLNCS style
-\and % enable for LLNCS style
-\metaInstXXX\\ % enable for LLNCS style
-\email{\metaMailXXX} % enable for LLNCS style
-} % enable for LLNCS style
-\titlerunning{\metaTitleShort} % enable for LLNCS style
+%\author{\metaAuthorYYY\inst{1} \and \metaAuthorXXX \inst{2}} % enable for LLNCS style
+%\authorrunning{\metaAuthorYYY et al.} % enable for LLNCS style
+%\tocauthor{\metaAuthorYYY, \metaAuthorXXX} % enable for LLNCS style
+%\institute{\metaInstYYY\\ % enable for LLNCS style
+%\email{\metaMailYYY} % enable for LLNCS style
+%\and % enable for LLNCS style
+%\metaInstXXX\\ % enable for LLNCS style
+%\email{\metaMailXXX} % enable for LLNCS style
+%} % enable for LLNCS style
+%\titlerunning{\metaTitleShort} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
 \newcommand{\metaSubject}{\metaConference~-~\metaConferenceArea} 
