cleanup and preparation for 'make content'

--- a/src/00_abstract.tex
+++ b/src/00_abstract.tex
@@ -18,26 +18,30 @@
 % ------------------------------------------------------------------------------
 % (1) Define the research area (which particular area are we focusing?).
 % ------------------------------------------------------------------------------
-\todoremark{area}\todo{one sentence about the research area (which broad area are we considering?)}
+\todoremark{area}\todo{one sentence about the research area (which broad area are we considering?)}%%area
 % ------------------------------------------------------------------------------
 % (2) Define the issue (what issue is getting to get solved?)
 % ------------------------------------------------------------------------------
-\todoremark{issue}\todo{one sentence about the issue (what issue is getting to get solved?)}
+\todoremark{issue}\todo{one sentence about the issue (what issue is getting to get solved?)}%%issue
 % ------------------------------------------------------------------------------
 % (3) Shortcomings of existing solutions.
 % ------------------------------------------------------------------------------
-\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}
+\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}%%related
 % ------------------------------------------------------------------------------
-% (4) Define the own approach.
+% (4) Describe the assumptions made in general terms.
 % ------------------------------------------------------------------------------
-\todoremark{approach}\todo{one sentence about the own approach}
+\todoremark{assumptions}\todo{In this paper, we assume ...}%%assumptions
 % ------------------------------------------------------------------------------
-% (5) How have we validated our results?
+% (5) Define the own approach.
 % ------------------------------------------------------------------------------
-\todoremark{validation}\todo{one sentence about the validation of the results}
+\todoremark{approach}\todo{one sentence about the own approach}%%approach
 % ------------------------------------------------------------------------------
-% (6) What have we shown / contributed? What is the result?
+% (6) How have we validated our results?
 % ------------------------------------------------------------------------------
-\todoremark{result}\todo{one sentence about the main contribution and an outlook}
+\todoremark{validation}\todo{one sentence about the validation of the results}%%validation
+% ------------------------------------------------------------------------------
+% (7) What have we shown / contributed? What is the result?
+% ------------------------------------------------------------------------------
+\todoremark{result}\todo{one sentence about the main contribution and an outlook}%%result
 \todomid{about 150 characters}
 \acresetall
