--- a/src/01_introduction.tex
+++ b/src/01_introduction.tex
@@ -30,10 +30,7 @@
 % of space.
 % ------------------------------------------------------------------------------
 \sidenote{motivation}
-\todotext{
-One paragraph:
-What is the problem? What is problem area. Open up the subject.
-}
+\todotext{One paragraph:What is the problem? What is problem area. Open up the subject.}%%area
 
 % ------------------------------------------------------------------------------
 % (2) Why is it interesting and important? Why is it hard? (e.g., why do
@@ -41,12 +38,7 @@ What is the problem? What is problem area. Open up the subject.
 % consider? Describe the problem addressed in this paper.
 % ------------------------------------------------------------------------------
 \sidenote{importance}
-\todotext{
-One paragraph:
-Why is it interesting and important? Why is it hard? (e.g., why do
-naive approaches fail?) Narrow down: what is problem you specifically
-consider? Describe the problem addressed in this paper.
-}
+\todotext{One paragraph: Why is it interesting and important? Why is it hard? (e.g., why do naive approaches fail?) Narrow down: what is problem you specifically consider? Describe the problem addressed in this paper.}%%issue
 
 % ------------------------------------------------------------------------------
 % (3) Survey past work relevant to this paper. Why hasn't it been solved
@@ -54,12 +46,7 @@ consider? Describe the problem addressed in this paper.
 % does mine differ?
 % ------------------------------------------------------------------------------
 \sidenote{related work}
-\todotext{
-One paragraph:
-Survey past work relevant to this paper. Why hasn't it been solved
-before (related work)? Or, what's wrong with previous proposed solutions? How
-does mine differ?
-}
+\todotext{One paragraph: Survey past work relevant to this paper. Why hasn't it been solved before (related work)? Or, what's wrong with previous proposed solutions? How does mine differ?}%%related
 
 % ------------------------------------------------------------------------------
 % (4) Describe the assumptions made in general terms, and state what results
@@ -67,13 +54,21 @@ does mine differ?
 % is addressed in the paper and what has been achieved.
 % ------------------------------------------------------------------------------
 \sidenote{assumption}
-In this paper, we assume ...
-\todotext{
-One paragraph: what are the assumptions
-}
+In this paper, we assume ... \todotext{One paragraph: what are the assumptions}%%assumptions
 
 % ------------------------------------------------------------------------------
-% (5) What are the key components of my approach and results? Also include any
+% (5) Define the own approach.
+% ------------------------------------------------------------------------------
+\todotext{one paragraph: what is the own approach}%%approach
+
+% ------------------------------------------------------------------------------
+% (6) How have we validated our results?
+% ------------------------------------------------------------------------------
+\sidenote{validation}
+We have validated our approach by... \todotext{How have we validated our results?}%%validation
+
+% ------------------------------------------------------------------------------
+% (7) What are the key components of my approach and results? Also include any
 % specific limitations. It's the most crucial paragraph, tell
 % your elevator pitch: How is it different/better/relates to other work?
 % Help the reviewer to get the scientific surplus value between all
@@ -82,26 +77,10 @@ One paragraph: what are the assumptions
 
 % ------------------------------------------------------------------------------
 \sidenote{contributions}
-The main contribution of this paper is...
-\todotext{
-What are the key components of my approach and results? Also include any
-specific limitations. It's the most crucial paragraph, tell
-your elevator pitch: How is it different/better/relates to other work?
-Help the reviewer to get the scientific surplus value between all
-the motivation and basics.
-}
+The main contribution of this paper is... \todotext{What are the key components of my approach and results? Also include any specific limitations. It's the most crucial paragraph, tell your elevator pitch: How is it different/better/relates to other work? Help the reviewer to get the scientific surplus value between all the motivation and basics.}%%result
 
 % ------------------------------------------------------------------------------
-% (6) How have we validated our results?
-% ------------------------------------------------------------------------------
-\sidenote{validation}
-We have validated our approach by...
-\todotext{
-How have we validated our results?
-}
-
-% ------------------------------------------------------------------------------
-% (7) ``The remainder of this paper is structured as follows...''. The last
+% (8) ``The remainder of this paper is structured as follows...''. The last
 % section must give an overview of the paper.
 % ------------------------------------------------------------------------------
 \sidenote{structure}
@@ -109,7 +88,7 @@ The remainder of the paper is structured as follows.
 We give a brief overview of related work in the context of \todo{CHANGEME}
   in \sectionname~\ref{sec:relatedwork}.
 In the subsequent \sectionname~\ref{sec:main} the
-    \todo{CHANGEME} system is presented. 
+    \todo{CHANGEME} system is presented.
 The evaluation results obtained from \todo{CHANGEME} is discussed in
   \sectionname~\ref{sec:evaluation}.
 Finally, we close giving some conclusions and considerations
