--- a/template.config.tex
+++ b/template.config.tex
@@ -39,7 +39,7 @@
   %dashed=false
   ]{biblatex}
 %\renewbibmacro*{bbx:savehash}{}  % to enabled the "dashed=false" option in ieee
-\addbibresource{\metaFilename.bib}
+\addbibresource{template.bib}
 \IfFileExists{global-do-not-edit.bib}{\addbibresource{global-do-not-edit.bib}}{}
 % ------------------------------------------------------------------------------
 
@@ -139,6 +139,6 @@ pdfencoding=auto,
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
-\input{\metaFilename.meta}
+\input{template.meta}
 \input{lib/resources/config/pdfmetadata}
 % ------------------------------------------------------------------------------
