removed some warnings

--- a/template.config.tex
+++ b/template.config.tex
@@ -1,5 +1,5 @@
 % bugfixes ---------------------------------------------------------------------
-\let\accentvec\vec               % llncs with amsmath bugfix
+%\let\accentvec\vec%               % llncs with amsmath bugfix
 % ------------------------------------------------------------------------------
 
 
@@ -19,8 +19,8 @@
 
 
 % bugfixes ---------------------------------------------------------------------
-\let\spvec\vec                   % llncs with amsmath bugfix
-\let\vec\accentvec               % llncs with amsmath bugfix
+%\let\spvec\vec                   % llncs with amsmath bugfix
+%\let\vec\accentvec               % llncs with amsmath bugfix
 % ------------------------------------------------------------------------------
 
 
