--- a/template.meta.tex
+++ b/template.meta.tex
@@ -1,5 +1,5 @@
 % existing authors list --------------------------------------------------------
-\IfFileExists{global-do-not-edit.authors.tex}{\input{global-do-not-edit.authors.tex}}{}
+\IfFileExists{global-do-not-edit.authors.tex}{\input{global-do-not-edit.authors.tex}}{} % chktex 27
 % ------------------------------------------------------------------------------
 
 % meta data --------------------------------------------------------------------
