Support for German

--- a/template.config.tex
+++ b/template.config.tex
@@ -26,6 +26,8 @@
 
 % basic config -----------------------------------------------------------------
 \input{lib/resources/config/default}
+\usepackage[ngerman]{babel}                         % Support for German
+\usepackage[autostyle=true,german=quotes]{csquotes} % Support for German
 \usepackage{float}                % Provides the H float modifier option
 %\usepackage{cite}                % Cite references %%for bibtex
 \usepackage[backend=biber,
