--- a/src/01_introduction.tex
+++ b/src/01_introduction.tex
@@ -86,11 +86,11 @@ The main contribution of this paper is... \todotext{What are the key components 
 \sidenote{structure}
 The remainder of the paper is structured as follows.
 We give a brief overview of related work in the context of \todo{CHANGEME}
-  in \sectionname~\ref{sec:relatedwork}.
-In the subsequent \sectionname~\ref{sec:main} the
+  in \Cref{sec:relatedwork}.
+In the subsequent \Cref{sec:main} the
     \todo{CHANGEME} system is presented.
 The evaluation results obtained from \todo{CHANGEME} is discussed in
-  \sectionname~\ref{sec:evaluation}.
+  \Cref{sec:evaluation}.
 Finally, we close giving some conclusions and considerations
-  and describe future work in \sectionname~\ref{sec:conclusions}.
+  and describe future work in \Cref{sec:conclusions}.
 % ------------------------------------------------------------------------------
