Support for German

--- a/template.config.tex
+++ b/template.config.tex
@@ -7,6 +7,7 @@
 \documentclass[
         a4paper,                % use a5paper for ISO A5; use a4paper for ISO A4
 %        pdftex,                 % PDF output
+        %ngerman,                % Support for German
         10pt,                   % font size
  conference,             % enable for IEEE style
  romanappendices,        % enable for IEEE style
