fixing some warnings & cleaning up code

--- a/src/00_abstract.tex
+++ b/src/00_abstract.tex
@@ -30,7 +30,7 @@
 % ------------------------------------------------------------------------------
 % (4) Describe the assumptions made in general terms.
 % ------------------------------------------------------------------------------
-\todoremark{assumptions}\todo{In this paper, we assume ...}%%assumptions
+\todoremark{assumptions}\todo{In this paper, we assume\dots}%%assumptions
 % ------------------------------------------------------------------------------
 % (5) Define the own approach.
 % ------------------------------------------------------------------------------
@@ -44,4 +44,4 @@
 % ------------------------------------------------------------------------------
 \todoremark{result}\todo{one sentence about the main contribution and an outlook}%%result
 \todomid{about 150 characters}
-\acresetall
+\acresetall%
