--- a/src/01_introduction.tex
+++ b/src/01_introduction.tex
@@ -54,7 +54,7 @@
 % is addressed in the paper and what has been achieved.
 % ------------------------------------------------------------------------------
 \sidenote{assumption}
-In this paper, we assume ... \todotext{One paragraph: what are the assumptions}%%assumptions
+In this paper, we assume\ldots \todotext{One paragraph: what are the assumptions}%%assumptions
 
 % ------------------------------------------------------------------------------
 % (5) Define the own approach.
@@ -65,7 +65,7 @@ In this paper, we assume ... \todotext{One paragraph: what are the assumptions}%
 % (6) How have we validated our results?
 % ------------------------------------------------------------------------------
 \sidenote{validation}
-We have validated our approach by... \todotext{How have we validated our results?}%%validation
+We have validated our approach by\ldots \todotext{How have we validated our results?}%%validation
 
 % ------------------------------------------------------------------------------
 % (7) What are the key components of my approach and results? Also include any
@@ -77,7 +77,8 @@ We have validated our approach by... \todotext{How have we validated our results
 
 % ------------------------------------------------------------------------------
 \sidenote{contributions}
-The main contribution of this paper is... \todotext{What are the key components of my approach and results? Also include any specific limitations. It's the most crucial paragraph, tell your elevator pitch: How is it different/better/relates to other work? Help the reviewer to get the scientific surplus value between all the motivation and basics.}%%result
+The main contribution of this paper is\ldots
+\todotext{What are the key components of my approach and results? Also include any specific limitations. It's the most crucial paragraph, tell your elevator pitch: How is it different/better/relates to other work? Help the reviewer to get the scientific surplus value between all the motivation and basics.}%%result
 
 % ------------------------------------------------------------------------------
 % (8) ``The remainder of this paper is structured as follows...''. The last
