--- a/src/05_conclusions.tex
+++ b/src/05_conclusions.tex
@@ -29,12 +29,12 @@
 %Recipient of the results/improvements. Who gaines provit from this?
 %-------------------------------------------------------------------------------
 \sidenote{benefits}
-\todomid{The presented work provides potential benefits for...}
+\todomid{The presented work provides potential benefits for\ldots}
 
 %-------------------------------------------------------------------------------
 %Further work: start with short-term, then long-term ojectives.
 % -------------------------------------------------------------------------------
 \sidenote{outlook}
-\todoshort{Our short-term goal is to...}
-\todoshort{In medium term, we ...}
-\todoshort{The long-term goals include...}
+\todoshort{Our short-term goal is to\ldots}
+\todoshort{In medium term, we\ldots}
+\todoshort{The long-term goals include\ldots}
