--- a/template.meta.tex
+++ b/template.meta.tex
@@ -30,7 +30,7 @@
 \newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY} % enable for IEEE style
 \newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}} % enable for IEEE style
 \newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX} % enable for IEEE style
-\author{\IEEEauthorYYY \and \IEEEauthorXXX} % enable for IEEE style
+\author{\IEEEauthorYYY~\and \IEEEauthorXXX} % enable for IEEE style
 % ------------------------------------------------------------------------------
 
 % author LLNCS -----------------------------------------------------------------
