--- a/src/03_approach.tex
+++ b/src/03_approach.tex
@@ -1,6 +1,6 @@
 \section{Main Part}\label{sec:main}
 
-See \autoref{lst:example} and \autoref{tbl:table1}.
+See \Cref{lst:example} and \Cref{tbl:table1}.
 % and \equationname~\ref{eq:var_idb}.
 
 \lstset{language=Java, caption=Example Code, label=lst:example}
@@ -9,15 +9,14 @@ See \autoref{lst:example} and \autoref{tbl:table1}.
 \small
 \begin{equation}
   \begin{array}{l}
-    \displaystyle t^{p_d}_{fw}(d) = max_{d}(t_{child_{i}}) \\
+    \displaystyle t^{p_d}_{fw}(d) = \max_{d}(t_{child_{i}}) \\
     \displaystyle t^{p_d}_{db}(d) = \sum_{i=1}^{d} t_{db_{i}} \\
     \displaystyle t^{p_d}_{pc}(n,d) =
     	\begin{cases}
         	t_{pc}(d) + c(n) & \text{if $d = 1$,}\\
-        	t_{pc}(d) + c(n) + max(t_{avail}(d)) & \text{if $d>1$.}\\
+        	t_{pc}(d) + c(n) + \max(t_{avail}(d)) & \text{if $d>1$.}\\
         \end{cases}
-  \end{array}
-  \label{eq:var_idb}
+  \end{array}\label{eq:var_idb}
 \end{equation}
 \normalsize
 
@@ -29,7 +28,6 @@ See \autoref{lst:example} and \autoref{tbl:table1}.
     Hans           & 80             \\
     Heinrich       & 77             \\
     Herbert        & 84             \\ \bottomrule
-    \end{tabular}
-    \label{tbl:table1}
+    \end{tabular}\label{tbl:table1}
 \end{table}
 
