--- a/src/04_evaluation.tex
+++ b/src/04_evaluation.tex
@@ -44,28 +44,24 @@ curves can then be chosen to illustrate this point. Whether your paper is
 theoretical or experimental, you must provide a careful interpretation of
 what your results mean and why they behave as they do.
 
-See \autoref{fig:example1} and \autoref{fig:example2}.
+See \Cref{fig:example1} and \Cref{fig:example2}.
 
 \begin{figure}
     \centering
     \includegraphics[width=.45\textwidth]{resources/images/example1.pdf} 
-    \caption{Example image.}
-    \label{fig:example1}
+    \caption{Example image.}\label{fig:example1}
 \end{figure}
 
 \begin{figure}
     \begin{subfigure}[b]{.5\textwidth}
     	\centering
 		\includegraphics[width=.5\textwidth]{resources/images/example2.pdf}
-		\caption{Example2}
-        \label{fig:example2}
+		\caption{Example2}\label{fig:example2}
     \end{subfigure}
     \begin{subfigure}[b]{.5\textwidth}
     	\centering
 		\includegraphics[width=.5\textwidth]{resources/images/example3.pdf}
-		\caption{Example3}
-        \label{fig:example3}
+		\caption{Example3}\label{fig:example3}
     \end{subfigure}    
-    \caption{Example images.}
-    \label{fig:exammple2_3}
+    \caption{Example images.}\label{fig:exammple2_3}
 \end{figure}
