--- a/template.tex
+++ b/template.tex
@@ -1,9 +1,9 @@
 % /* include config --------------------------------------------------------- */
 \input{template.config.tex}
 \input{template.acro.tex} % acro package
-\IfFileExists{global-do-not-edit.acro.tex}{\input{global-do-not-edit.acro.tex}}{}
+\IfFileExists{global-do-not-edit.acro.tex}{\input{global-do-not-edit.acro.tex}}{} % chktex 27
 \AtBeginDocument{\let\textlabel\label}
-\ieeecopyright{.2}{0.055}{978-1-4799-1234-5/67/\$31.00~\copyright~2015~IEEE}
+%\ieeecopyright{.2}{0.055}{978-1-4799-1234-5/67/\$31.00~\copyright~2015~IEEE}
 % /* ------------------------------------------------------------------------ */
 
 % /* begin paper ------------------------------------------------------------ */
@@ -40,7 +40,7 @@
 
     %\bibliographystyle{IEEEtran} % enable for bibtex
     %\bibliography{template} % enable for bibtex
-    \printbibliography % enable for biber style
+    \printbibliography% enable for biber style
     % to show unreferenced publications ------------------------------------- */
     %\bibliographystyle{unsrt}
     %\cite{dummy}
