--- a/template.config.tex
+++ b/template.config.tex
@@ -16,14 +16,22 @@
 %]{llncs} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
-% ------------------------------------------------------------------------------
-
-
 % bugfixes ---------------------------------------------------------------------
 %\let\spvec\vec                   % llncs with amsmath bugfix
 %\let\vec\accentvec               % llncs with amsmath bugfix
 % ------------------------------------------------------------------------------
 
+% disable commands -------------------------------------------------------------
+\makeatletter
+\newcommand{\dontusepackage}[2][]{%
+  \@namedef{ver@#2.sty}{9999/12/31}%
+  \@namedef{opt@#2.sty}{#1}}
+\makeatother
+
+%\dontusepackage[tocindentauto]{tocstyle}
+%\newcommand{\usetocstyle}[1]{}
+%\newcommand{\settocstylefeature}[2]{}
+% ------------------------------------------------------------------------------
 
 % basic config -----------------------------------------------------------------
 \input{lib/resources/config/default}
