--- a/template.config.tex
+++ b/template.config.tex
@@ -7,7 +7,7 @@
 \documentclass[
         a4paper,                % use a5paper for ISO A5; use a4paper for ISO A4
 %        pdftex,                 % PDF output
-%        ngerman,                % Support for German
+        ngerman,                % Support for German
         10pt,                   % font size
  conference,             % enable for IEEE style
  romanappendices,        % enable for IEEE style
@@ -35,8 +35,8 @@
 
 % basic config -----------------------------------------------------------------
 \input{lib/resources/config/default}
-%\usepackage[ngerman]{babel}                         % Support for German
-%\usepackage[babel,autostyle=true,german=quotes]{csquotes} % Support for German
+\usepackage[ngerman]{babel}                         % Support for German
+\usepackage[babel,autostyle=true,german=quotes]{csquotes} % Support for German
 \usepackage{float}                % Provides the H float modifier option
 %\usepackage{cite}                % Cite references %%for bibtex
 \usepackage[backend=biber,
