llncs with amsmath bugfix

--- a/template.config.tex
+++ b/template.config.tex
@@ -1,5 +1,6 @@
 % bugfixes ---------------------------------------------------------------------
 %\let\accentvec\vec%               % llncs with amsmath bugfix
+\RequirePackage{amsmath}           % llncs with amsmath bugfix
 % ------------------------------------------------------------------------------
 
 
