how to fix dottedtocline warning

--- a/template.config.tex
+++ b/template.config.tex
@@ -29,6 +29,7 @@
   \@namedef{opt@#2.sty}{#1}}
 \makeatother
 
+%to avoid warnings with llncs + tocstyle ("dottedtocline" issue)
 %\dontusepackage[tocindentauto]{tocstyle}
 %\newcommand{\usetocstyle}[1]{}
 %\newcommand{\settocstylefeature}[2]{}
