added genitive/dative acronyms

--- a/template.config.tex
+++ b/template.config.tex
@@ -10,11 +10,11 @@
 %        pdftex,                 % PDF output
         ngerman,                % Support for German
         10pt,                   % font size
- conference,             % enable for IEEE style
- romanappendices,        % enable for IEEE style
- %runningheads,           % enable for LLNCS style
-]{IEEEtran} % enable for IEEE style
-%]{llncs} % enable for LLNCS style
+ %conference,             % enable for IEEE style
+ %romanappendices,        % enable for IEEE style
+ runningheads,           % enable for LLNCS style
+%]{IEEEtran} % enable for IEEE style
+]{llncs} % enable for LLNCS style
 % ------------------------------------------------------------------------------
 
 % bugfixes ---------------------------------------------------------------------
@@ -116,6 +116,42 @@
         \acro_first_upper:
         \acro_long:n {#1}
       }
+	% genitive: 
+    \ProvideAcroEnding{genitive}{}{s} 
+	\NewAcroCommand \acg { 
+	  \acro_genitive: 
+	  \acro_use:n {#1} 
+	} 
+	\NewAcroCommand \aclg { 
+	  \acro_genitive: 
+	  \acro_long:n {#1} 
+	} 
+	\NewAcroCommand \acsg { 
+	  \acro_genitive: 
+	  \acro_short:n {#1} 
+	} 
+	\NewAcroCommand \acfg { 
+	  \acro_genitive: 
+	  \acro_first:n {#1} 
+	} 
+	% dative: 
+	\ProvideAcroEnding{dative}{}{} 
+	\NewAcroCommand \acd { 
+	  \acro_dative: 
+	  \acro_use:n {#1} 
+	} 
+	\NewAcroCommand \acsd { 
+	  \acro_dative: 
+	  \acro_short:n {#1} 
+	} 
+	\NewAcroCommand \acld { 
+	  \acro_dative: 
+	  \acro_long:n {#1} 
+	} 
+	\NewAcroCommand \acfd { 
+	  \acro_dative: 
+	  \acro_first:n {#1} 
+	}
     \ExplSyntaxOff%
 \else
     \newcommand{\aclu}[1]{\acs{#1}}
