--- a/src/00_abstract.tex
+++ b/src/00_abstract.tex
@@ -18,30 +18,30 @@
 % ------------------------------------------------------------------------------
 % (1) Define the research area (which particular area are we focusing?).
 % ------------------------------------------------------------------------------
-\todoremark{area}\todo{one sentence about the research area (which broad area are we considering?)}%%area
+\todoremark{area}\todo{one sentence about the research area (which broad area are we considering?)}%%context
 % ------------------------------------------------------------------------------
 % (2) Define the issue (what issue is getting to get solved?)
 % ------------------------------------------------------------------------------
-\todoremark{issue}\todo{one sentence about the issue (what issue is getting to get solved?)}%%issue
+\todoremark{issue}\todo{one sentence about the issue (what issue is getting to get solved?)}%%problem
 % ------------------------------------------------------------------------------
 % (3) Shortcomings of existing solutions.
 % ------------------------------------------------------------------------------
-\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}%%related
+\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}%%work
 % ------------------------------------------------------------------------------
-% (4) Describe the assumptions made in general terms.
-% ------------------------------------------------------------------------------
-\todoremark{assumptions}\todo{In this paper, we assume\dots}%%assumptions
-% ------------------------------------------------------------------------------
-% (5) Define the own approach.
+% (4) Define the own approach.
 % ------------------------------------------------------------------------------
 \todoremark{approach}\todo{one sentence about the own approach}%%approach
 % ------------------------------------------------------------------------------
+% (5) What is the expected/generated scientific surplus value?
+% ------------------------------------------------------------------------------
+\todoremark{result}\todo{one sentence about the surplus value}%%result
+% ------------------------------------------------------------------------------
 % (6) How have we validated our results?
 % ------------------------------------------------------------------------------
-\todoremark{validation}\todo{one sentence about the validation of the results}%%validation
+\todoremark{validation}\todo{one sentence about the validation of the results}%%evaluation
 % ------------------------------------------------------------------------------
-% (7) What have we shown / contributed? What is the result?
+% (7) How could this work be extended?
 % ------------------------------------------------------------------------------
-\todoremark{result}\todo{one sentence about the main contribution and an outlook}%%result
+\todoremark{result}\todo{one sentence about the main contribution and an outlook}%%outlook
 \todomid{about 150 characters}
 \acresetall%
