--- a/template.meta.tex
+++ b/template.meta.tex
@@ -11,9 +11,9 @@
 % ------------------------------------------------------------------------------
 
 % authors ----------------------------------------------------------------------
-\newcommand{\metaAuthorYYY}{F. Last}
-\newcommand{\metaMailYYY}{first.last@example.com}
-\newcommand{\metaInstYYY}{University, City, Country,\\Department}
+\newcommand{\metaAuthorFirst}{F. Last}
+\newcommand{\metaMailFirst}{first.last@example.com}
+\newcommand{\metaInstFirst}{University, City, Country,\\Department}
 
 \newcommand{\metaAuthorXXX}{T. Do}
 \newcommand{\metaMailXXX}{first.last@example.org}
@@ -21,24 +21,24 @@
 % ------------------------------------------------------------------------------
 
 % author PDF -------------------------------------------------------------------
-\newcommand{\metaAuthorMail}{\metaMailYYY}
-\newcommand{\metaAuthorShort}{\metaAuthorYYY}
+\newcommand{\metaAuthorMail}{\metaMailFirst}
+\newcommand{\metaAuthorShort}{\metaAuthorFirst}
 % ------------------------------------------------------------------------------
 
 % author IEEE ------------------------------------------------------------------
-%\newcommand{\IEEEinstYYY}{\IEEEauthorblockA{\metaInstYYY}} % enable for IEEE style
-%\newcommand{\IEEEauthorYYY}{\IEEEauthorblockN{\metaAuthorYYY}\IEEEinstYYY} % enable for IEEE style
+%\newcommand{\IEEEinstFirst}{\IEEEauthorblockA{\metaInstFirst}} % enable for IEEE style
+%\newcommand{\IEEEauthorFirst}{\IEEEauthorblockN{\metaAuthorFirst}\IEEEinstFirst} % enable for IEEE style
 %\newcommand{\IEEEinstXXX}{\IEEEauthorblockA{\metaInstXXX}} % enable for IEEE style
 %\newcommand{\IEEEauthorXXX}{\IEEEauthorblockN{\metaAuthorXXX}\metaInstXXX} % enable for IEEE style
-%\author{\IEEEauthorYYY~\and \IEEEauthorXXX} % enable for IEEE style
+%\author{\IEEEauthorFirst~\and \IEEEauthorXXX} % enable for IEEE style
 % ------------------------------------------------------------------------------
 
 % author LLNCS -----------------------------------------------------------------
-\author{\metaAuthorYYY\inst{1} \and \metaAuthorXXX \inst{2}} % enable for LLNCS style
-\authorrunning{\metaAuthorYYY et al.} % enable for LLNCS style
-\tocauthor{\metaAuthorYYY, \metaAuthorXXX} % enable for LLNCS style
-\institute{\metaInstYYY\\ % enable for LLNCS style
-\email{\metaMailYYY} % enable for LLNCS style
+\author{\metaAuthorFirst\inst{1} \and \metaAuthorXXX \inst{2}} % enable for LLNCS style
+\authorrunning{\metaAuthorFirst et al.} % enable for LLNCS style
+\tocauthor{\metaAuthorFirst, \metaAuthorXXX} % enable for LLNCS style
+\institute{\metaInstFirst\\ % enable for LLNCS style
+\email{\metaMailFirst} % enable for LLNCS style
 \and % enable for LLNCS style
 \metaInstXXX\\ % enable for LLNCS style
 \email{\metaMailXXX} % enable for LLNCS style
