--- a/src/01_introduction.tex
+++ b/src/01_introduction.tex
@@ -30,7 +30,7 @@
 % of space.
 % ------------------------------------------------------------------------------
 \sidenote{motivation}
-\todotext{One paragraph:What is the problem? What is problem area. Open up the subject.}%%area
+\todotext{One paragraph:What is the problem? What is problem area. Open up the subject.}%%context
 
 % ------------------------------------------------------------------------------
 % (2) Why is it interesting and important? Why is it hard? (e.g., why do
@@ -38,7 +38,7 @@
 % consider? Describe the problem addressed in this paper.
 % ------------------------------------------------------------------------------
 \sidenote{importance}
-\todotext{One paragraph: Why is it interesting and important? Why is it hard? (e.g., why do naive approaches fail?) Narrow down: what is problem you specifically consider? Describe the problem addressed in this paper.}%%issue
+\todotext{One paragraph: Why is it interesting and important? Why is it hard? (e.g., why do naive approaches fail?) Narrow down: what is problem you specifically consider? Describe the problem addressed in this paper.}%%problem
 
 % ------------------------------------------------------------------------------
 % (3) Survey past work relevant to this paper. Why hasn't it been solved
@@ -46,39 +46,35 @@
 % does mine differ?
 % ------------------------------------------------------------------------------
 \sidenote{related work}
-\todotext{One paragraph: Survey past work relevant to this paper. Why hasn't it been solved before (related work)? Or, what's wrong with previous proposed solutions? How does mine differ?}%%related
+\todotext{One paragraph: Survey past work relevant to this paper. Why hasn't it been solved before (related work)? Or, what's wrong with previous proposed solutions? How does mine differ?}%%work
 
 % ------------------------------------------------------------------------------
-% (4) Describe the assumptions made in general terms, and state what results
-% have been obtained. This gives the reader an initial overview of what problem
-% is addressed in the paper and what has been achieved.
+% (4) Define the own approach.
 % ------------------------------------------------------------------------------
-\sidenote{assumption}
-In this paper, we assume\ldots \todotext{One paragraph: what are the assumptions}%%assumptions
+\sidenote{own approach}
+\todotext{One paragraph: What is the own approach.}%%approach
 
 % ------------------------------------------------------------------------------
-% (5) Define the own approach.
-% ------------------------------------------------------------------------------
-\todotext{one paragraph: what is the own approach}%%approach
-
-% ------------------------------------------------------------------------------
-% (6) How have we validated our results?
-% ------------------------------------------------------------------------------
-\sidenote{validation}
-We have validated our approach by\ldots \todotext{How have we validated our results?}%%validation
-
-% ------------------------------------------------------------------------------
-% (7) What are the key components of my approach and results? Also include any
+% (5) What are the key components of my approach and results? Also include any
 % specific limitations. It's the most crucial paragraph, tell
 % your elevator pitch: How is it different/better/relates to other work?
 % Help the reviewer to get the scientific surplus value between all
 % the motivation and basics.
 % ------------------------------------------------------------------------------
+\sidenote{contribution}
+\todotext{One paragraph: What is the surplus value of this paper.}%%result
 
 % ------------------------------------------------------------------------------
-\sidenote{contributions}
-The main contribution of this paper is\ldots
-\todotext{What are the key components of my approach and results? Also include any specific limitations. It's the most crucial paragraph, tell your elevator pitch: How is it different/better/relates to other work? Help the reviewer to get the scientific surplus value between all the motivation and basics.}%%result
+% (6) How have we validated our results?
+% ------------------------------------------------------------------------------
+\sidenote{evaluation}
+\todotext{One paragraph: How have we validated our results?}%%evaluation
+
+% ------------------------------------------------------------------------------
+% (7) How could this work be extended?
+% ------------------------------------------------------------------------------
+\sidenote{outlook}
+\todotext{One paragraph: ow could this work be extended?}%%outlook
 
 % ------------------------------------------------------------------------------
 % (8) ``The remainder of this paper is structured as follows...''. The last
