moving core meta data to main file

--- a/template.tex
+++ b/template.tex
@@ -1,3 +1,14 @@
+% core meta data --------------------------------------------------------------------
+\newcommand{\metaTitle}{A Nice Descriptive Title\texorpdfstring{\\}{ }without Abbreviations}
+\newcommand{\metaTitleShort}{Nice Short Title}
+\newcommand{\metaSubject}{Conference Name} 
+\newcommand{\metaKeywords}{some, keywords}
+
+\newcommand{\metaAuthorFirst}{F. Last}
+\newcommand{\metaMailFirst}{first.last@example.com}
+\newcommand{\metaInstFirst}{University, City, Country,\\Department}
+% ------------------------------------------------------------------------------
+
 % /* include config --------------------------------------------------------- */
 \input{template.config.tex}
 \input{template.acro.tex} % acro package
