disabling 'hyperxmp' for now as incompatible currently with either hyperref or pdflatex

--- a/template.config.tex
+++ b/template.config.tex
@@ -147,7 +147,7 @@
 
 
 % hyperlinks (last package) ----------------------------------------------------
-\usepackage{hyperxmp}                 % Semantic meta data (RDF/XMP)
+%\usepackage{hyperxmp}                 % Semantic meta data (RDF/XMP) % disable for now as incompatible currently with either hyperref or pdflatex
 \makeatletter
 \@ifpackageloaded{tex4ht}{\usepackage[tex4ht]{hyperref}}{
 \usepackage[pdftex,                   % Hyperlinks in PDFs
