--- a/template.config.tex
+++ b/template.config.tex
@@ -147,7 +147,7 @@
 
 
 % hyperlinks (last package) ----------------------------------------------------
-%\usepackage{hyperxmp}                 % Semantic meta data (RDF/XMP) % disable for now as incompatible currently with either hyperref or pdflatex
+\usepackage{hyperxmp}                 % Semantic meta data (RDF/XMP)
 \makeatletter
 \@ifpackageloaded{tex4ht}{\usepackage[tex4ht]{hyperref}}{
 \usepackage[pdftex,                   % Hyperlinks in PDFs
@@ -177,6 +177,7 @@ hypertexnames=true,                   % Whatever ;)
 pdfencoding=auto,
 %draft,                                % Disable hyperlinks for IEEEtran / EDAS
 ]{hyperref}                           % Use hyperlinks
+\hypersetup{keeppdfinfo}              % fix for hyperxmp, however, breaks PDF/A compliance
 %\renewcommand*{\backref}[1]{[cited at page #1]} % Show formatted backlinks
 %\renewcommand{\url}[1]{#1}           % Disable hyperlinks for IEEEtran / EDAS
 %\usepackage{nohyperref}              % Disable hyperlinks for IEEEtran / EDAS
