change for git-diff

--- a/src/00_abstract.tex
+++ b/src/00_abstract.tex
@@ -26,7 +26,7 @@
 % ------------------------------------------------------------------------------
 % (3) Shortcomings of existing solutions.
 % ------------------------------------------------------------------------------
-\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions.}%%work
+\todoremark{related work}\todo{one sentence about the shortcomings of existing solutions}%%work
 % ------------------------------------------------------------------------------
 % (4) Define the own approach.
 % ------------------------------------------------------------------------------
