--- a/src/02_relatedwork.tex
+++ b/src/02_relatedwork.tex
@@ -13,7 +13,7 @@
 In order to place the contribution of the paper in context
   and identify the gap the work is intended to fill,
   we provide a short literature survey.
-\todoshort{This survey focuses on \ac{WATER} and \aclu{Greedy Computing}\ldots\aclu{Greedy Computing}}.
+\todoshort{This survey focuses on \ac{WATER} and \ac{Greedy Computing}\ldots\ac{Greedy Computing}}.
 
 \sidenote{gap 1}
 \todotext{related work 1}
